comp output param

--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1>Upcoming Events</h1>
   <hr/>
-    <app-event-thumbnail [event]="eventData"></app-event-thumbnail>
+    <app-event-thumbnail [event]="eventData" (eventClick)="handleEventClicked($event)"></app-event-thumbnail>
 </div>
