--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -1,7 +1,9 @@
 <div>
   <h1>Upcoming Events</h1>
   <hr/>
-    <app-event-thumbnail #thumbnail [event]="eventData" (eventClick)="handleEventClicked($event)"></app-event-thumbnail>
-    <p>ThumbnailComponentID {{thumbnail.thumbnailComponentId}}</p>
-    <a (click)="thumbnail.templateReferenceEventCalled()" href='#'>Call Thumbnail</a>
+    <div class="row">
+      <div class="col-md-5" *ngFor="let event of eventData">
+          <app-event-thumbnail (click)="handleThumbnailClick(event.name)"   [event]="event" (eventClick)="handleEventClicked($event)"></app-event-thumbnail>
+      </div>
+    </div>
 </div>
