--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,9 +7,9 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a  [routerLink]="['/events']" href="#">All Events</a>
+          <a  [routerLink]="['/events']" routerLinkActive="active" href="#" [routerLinkActiveOptions]="{exact: true}">All Events</a>
         </li>
-        <li><a href="" [routerLink]="['/events/new']">Create Event</a></li>
+        <li><a href="" [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
             Events
